horizontal scroll fix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -826,7 +826,8 @@ h1, h2, h3, h4
 
 .scroll-shadow-horizontal
   height: 180px
-  overflow: hidden
+  overflow-x: auto
+  overflow-y: hidden
 
 .scroll-overlay-top
   pointer-events: none
